<resources>
    <string name="app_name">Time Tracker</string>
    <string name="titleCreate">Manage Activities</string>
    <string name="titleStart">Start Activity</string>
    <string name="titleStatistics">Activity Statistics</string>
    <string name="create_activity">Manage Activities</string>
    <string name="activity_name">Activity Name</string>
    <string name="activity_type">Activity Type</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="start_time">00:00:00</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
</resources>
