<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:gravity="center">


    <Button
        android:layout_width="@dimen/bttnWidth"
        android:layout_marginBottom="@dimen/bttm_margin"
        android:layout_height="wrap_content"
        android:text="@string/titleCreate"
        android:onClick="createActivity"/>
    <Button
        android:layout_width="@dimen/bttnWidth"
        android:layout_marginBottom="@dimen/bttm_margin"
        android:layout_height="wrap_content"
        android:text="@string/titleStart"
        android:onClick="startActivity"/>

    <Button
        android:layout_width="@dimen/bttnWidth"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bttm_margin"
        android:text="@string/titleStatistics"
        android:onClick="openStats"/>

</LinearLayout>